# make-argocd-fly

./: .coveragerc  .gitignore  CONTRIBUTING.md  DEPRECATIONS.md  MANIFEST.in  README.md  build_requirements.txt  config.yml  dev_requirements.txt  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  tox.ini
.github/workflows/: coverage.yml  pypi-publish.yml  release.yml  tests-run.yml  tests.yml
docs/: argocd.md  caveats.md  cli.md  configuration.md  examples.md  getting-started.md  kustomize.md  templates.md
examples/app_types/config/: config.yml
examples/app_types/source/01_yaml_app/: configmap_example_app.yml
examples/app_types/source/02_jinja2_app/: example_app.yml.j2
examples/app_types/source/03_kustomize_app/: kustomization.yml
examples/app_types/source/04_kustomize_helm_app/: kustomization.yml.j2
examples/app_types/source/06_helmfile_app/: helmfile.yaml.j2
examples/monitoring_stack/config/: config.yml  infra.yml  k8s_apps.yml
examples/monitoring_stack/source/alertmanager/: ConfigMap.yml.j2  Service.yml.j2
examples/monitoring_stack/source/common/: Namespace.yml.j2
examples/monitoring_stack/source/grafana/: Deployment.yml.j2  Service.yml.j2  configmap_grafana-dashboard.yml.j2
examples/monitoring_stack/source/kube_state_metrics/: clusterRole.yml  clusterrolebinding.yml.j2  deployment.yml.j2  service.yml.j2
make_argocd_fly/: application.py  cli_args.py  cliparam.py  cliparams.py  config.py  const.py  consts.py  debug_dump.py  default.py  defaults.py  exception.py  exceptions.py  init.py  limits.py  log_config.yml  main.py  namegen.py  output.py  param.py  params.py  parser.py  pipeline.py  renderer.py  resource.py  source.py  stage.py  stats.py  step.py  steps.py  type.py  util.py  utils.py  warning.py  warnings.py
make_argocd_fly/context/: __init__.py  data.py
make_argocd_fly/resource/: data.py  persistence.py  type.py  viewer.py  writer.py
make_argocd_fly/stage/: __init__.py  _base.py  discover.py  process.py  write.py
tests/: test_application.py  test_cliparam.py  test_cliparams.py  test_config.py  test_const.py  test_consts.py  test_context.py  test_debug_dump.py  test_namegen.py  test_param.py  test_params.py  test_pipeline.py  test_renderer.py  test_resource.py  test_stage.py  test_stats.py  test_step.py  test_steps.py  test_util.py  test_utils.py
tests/e2e/config/: apps.yml  vars.yml
tests/e2e/source/app_11/: values.yml.j2
tests/e2e_deprecated/: config.yml
tests/e2e_deprecated/config/: apps.yml  config.yml  infra.yml
tests/examples/app_types/: config.yml
tests/manual/: config.yml
tests/manual/config/: apps.yml  vars.yml
tests/manual_deprecated/: config.yml
(+281 files in other folders)
