[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "make_argocd_fly"
version = "0.0.27"
authors = [
    {name = "Andrei Lapin", email = "karandash8@gmail.com"},
]
description = "A project to generate ArgoCD application resources"
requires-python = ">=3.10"
keywords = ["argocd", "kustomize", "jinja2"]
license = {text = "GPLv3+"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["readme", "dependencies"]

[project.scripts]
make-argocd-fly = "make_argocd_fly.main:main"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}
