[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "make-argocd-fly"
authors = [
    {name = "Andrei Lapin", email = "karandash8@gmail.com"},
]
description = "A project to generate ArgoCD application resources"
requires-python = ">=3.11"
keywords = ["argocd", "kustomize", "jinja2"]
license = {text = "GPLv3+"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["readme", "dependencies", "version"]

[project.scripts]
make-argocd-fly = "make_argocd_fly.main:main"

[tool.setuptools_scm]

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}
