[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "make-argocd-fly"
description = "A tool to generate Kubernetes manifests from templates"
# license = "GPL-3.0-only"  # https://github.com/pypa/packaging-problems/issues/870
authors = [
    {name = "Andrei Lapin", email = "karandash8@gmail.com"},
]
requires-python = ">=3.11"
keywords = ["argocd", "kustomize", "jinja2"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dynamic = [
    "readme",
    "dependencies",
    "version"
]
urls."Source Code" = "https://github.com/Karandash8/make-argocd-fly"

[project.scripts]
make-argocd-fly = "make_argocd_fly.main:cli_entry_point"

[tool.setuptools_scm]

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
